# service_rust-master

service_rust-master/: .env  Cargo.toml  README.md
service_rust-master/migrations/2022-11-30-111713_create_events/: down.sql  up.sql
service_rust-master/src/: graphql.rs  models.rs  schema.graphql  schema.rs
