[package]
name = "service_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-cors = "0.1"
dotenv = "0.14.1"
env_logger = "0.6.2"
futures = "0.1.28"
juniper = "0.13"
juniper-from-schema = "^0.3"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
chrono = "0.4.23"
bigdecimal = { version = "0.3.0", features = ["serde"] }

[dev-dependencies]
jsonpath_lib = "0.3.0"
testcontainers = "0.14.0"